force-app/main/default/objects/AIG_Milestone__c/AIG_Milestone__c.object-meta.xml
<CustomObject>
    <label>Milestone</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>