force-app/main/default/objects/AIG_Milestone__c/fields/AIG_Milestone__c.field-meta.xml
<CustomField>
    <fullName>AIG_Milestone__c</fullName>
    <label>Current Milestone</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Milestone_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Pricing Request Submitted Date</fullName>
            </value>
            <value>
                <fullName>Proposal Due Date</fullName>
            </value>
            <value>
                <fullName>Bid Decision Date</fullName>
            </value>
            <value>
                <fullName>Strategy Call Date</fullName>
            </value>
            <value>
                <fullName>Preliminary Pricing Due Date</fullName>
            </value>
            <value>
                <fullName>Pricing Review Call Date</fullName>
            </value>
            <value>
                <fullName>Executive Review Meeting</fullName>
            </value>
            <value>
                <fullName>Write-Up Due Date</fullName>
            </value>
            <value>
                <fullName>Draft Proposal Creation Date</fullName>
            </value>
            <value>
                <fullName>Draft Proposal Review Date</fullName>
            </value>
            <value>
                <fullName>Pricing Population &amp; Actuary Review Date</fullName>
            </value>
            <value>
                <fullName>Proposal Population &amp; Actuary Review Date</fullName>
            </value>
            <value>
                <fullName>Sales Lead Review Date</fullName>
            </value>
            <value>
                <fullName>Final Proposal Due Date</fullName>
            </value>
            <value>
                <fullName>Glenn / Ken Review Meeting</fullName>
            </value>
            <value>
                <fullName>Proposal Ship Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>