force-app/main/default/objects/AIG_Milestone__c/fields/AIG_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>AIG_Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Milestones</relationshipLabel>
    <relationshipName>Milestones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>