force-app/main/default/objects/AIG_Milestone__c/fields/AIG_Remaining_Milestones__c.field-meta.xml
<CustomField>
    <fullName>AIG_Remaining_Milestones__c</fullName>
    <label>Remaining Milestones</label>
    <summaryFilterItems>
        <field>AIG_Milestone_Task__c.AIG_Actual_Date__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>AIG_Milestone_Task__c.Milestone__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>