force-app/main/default/objects/AIG_Milestone__c/fields/AIG_Total_Milestones__c.field-meta.xml
<CustomField>
    <fullName>AIG_Total_Milestones__c</fullName>
    <label>Total Milestones</label>
    <summaryForeignKey>AIG_Milestone_Task__c.Milestone__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>