force-app/main/default/objects/AIG_Milestone__c/fields/Milestone_Type__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Type__c</fullName>
    <label>Milestone Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pricing Timeline</fullName>
            </value>
            <value>
                <fullName>Proposal Timeline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>