force-app/main/default/objects/AIG_Milestone__c/recordTypes/AIG_Pricing_Milestone_Greater_than_100m.recordType-meta.xml
<RecordType>
    <fullName>AIG_Pricing_Milestone_Greater_than_100m</fullName>
    <active>true</active>
    <label>Pricing Milestone Greater than 100m</label>
</RecordType>