force-app/main/default/objects/AIG_Milestone__c/recordTypes/AIG_Pricing_Timeline_Less_Than_100m.recordType-meta.xml
<RecordType>
    <fullName>AIG_Pricing_Timeline_Less_Than_100m</fullName>
    <active>true</active>
    <label>Pricing Timeline Less Than 100m</label>
</RecordType>