force-app/main/default/objects/AIG_Milestone__c/recordTypes/AIG_Proposal_Timeline.recordType-meta.xml
<RecordType>
    <fullName>AIG_Proposal_Timeline</fullName>
    <active>true</active>
    <label>Proposal Timeline</label>
</RecordType>