force-app/main/default/objects/AIG_Milestone__c/validationRules/AIG_Name_cannot_be_Updated.validationRule-meta.xml
<ValidationRule>
    <fullName>AIG_Name_cannot_be_Updated</fullName>
    <active>true</active>
    <description>No user is able to Update Milestone Name</description>
    <errorConditionFormula>ISCHANGED(Name)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Milestone name cannot be updated.</errorMessage>
</ValidationRule>